# django-widget-renderers

./: .gitignore  LICENSE  PROPOSAL.md  README.md  RELEASING.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
demo/: demo.py
demo/templates/bootstrapish/: text_input.html
demo/templates/tailwindish/: text_input.html
src/widget_renderers/: __init__.py  admin.py  apps.py  patches.py
tests/: conftest.py  settings.py  test_admin.py  test_backwards_compat.py  test_limitations.py  test_resolution.py  test_scoping.py
tests/templates/: custom_money.html
tests/templates/alpha/: select.html  text_input.html  textarea.html
tests/templates/beta/: select.html  text_input.html
