[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-widget-renderers"
version = "0.1.0"
description = "Renderer-driven widget templates for Django forms: let a FormRenderer decide which template each widget uses."
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [{ name = "Andrew Miller", email = "info@akmiller.co.uk" }]
keywords = ["django", "forms", "widgets", "templates", "renderer"]
dependencies = ["Django>=4.2"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]

[project.urls]
Homepage = "https://github.com/nanorepublica/django-widget-renderers"
Proposal = "https://github.com/django/new-features/issues/172"

[tool.hatch.build.targets.wheel]
packages = ["src/widget_renderers"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
force-single-line = true
